Restore and update CSS styles for layout and buttons
Signed-off-by: horudingu-ai <horudingu@gmail.com>

--- a/poca/css/style.css
+++ b/poca/css/style.css
@@ -588,7 +588,17 @@ transition: all 0.5s;
   text-align: center;
   display: inline-block;  
 }
+.open .hamburger span:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 6px);
+}
 
+.open .hamburger span:nth-child(2) {
+  opacity: 0;
+}
+
+.open .hamburger span:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -7px);
+}
 
 .mainvisual {
     height: 60vh;
@@ -654,5 +664,6 @@ transition: all 0.5s;
 .jk{
   display: none;
 }
+
 
 }
